objects/Project_Skill__c.object
<CustomObject>
    <fields>
        <fullName>Expertise__c</fullName>
        <formula>TEXT(Skill__r.Experience__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expertise</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_TXT__c</fullName>
        <externalId>true</externalId>
        <label>External TXT</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <label>Skill</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Type__c</field>
                <operation>equals</operation>
                <valueField>Skill__c.Type__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Skill__c</referenceTo>
        <relationshipLabel>Project Skills</relationshipLabel>
        <relationshipName>Project_Skills</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Technical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Non-Technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project Skill</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Rating__c</columns>
        <columns>Type__c</columns>
        <columns>Skill__c</columns>
        <columns>External_TXT__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Skill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Rating</fullName>
        <active>true</active>
        <errorConditionFormula>Rating__c &gt; 5  || Rating__c &lt; 1</errorConditionFormula>
        <errorMessage>Please Add Rating in Between 1 to 5</errorMessage>
    </validationRules>
</CustomObject>